Spacing issues addressed

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -21,9 +21,6 @@ body {
   color: #444;
   transition: all .4s .3s ease-in; }
 
-body, html {
-  min-height: 100vh; }
-
 /*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Change the default font family in all browsers (opinionated).
@@ -395,9 +392,10 @@ textarea {
 
 .main {
   margin-top: 10%; }
-
-.footer {
-  margin-top: 10%; }
+  .main .row-bot {
+    margin-top: 10%; }
+    .main .row-bot ul {
+      margin-bottom: 20px; }
 
 body {
   background: red;
@@ -535,10 +533,10 @@ ul {
       letter-spacing: 1.5px;
       padding-bottom: 15px; }
 
-.main li {
+.main-list li {
   font-size: 24px;
   line-height: 40px; }
-  .main li:first-child {
+  .main-list li:first-child {
     font-size: 14px;
     line-height: 23px; }
 
