--- a/src/scss/modules/_defaults.scss
+++ b/src/scss/modules/_defaults.scss
@@ -12,5 +12,4 @@ body {
   transition: all .4s .3s ease-in;
 }
 body,html{
-	min-height: 100vh;
 }
