--- a/src/scss/modules/_lists.scss
+++ b/src/scss/modules/_lists.scss
@@ -16,7 +16,7 @@ ul {
 }
 
 
-.main {
+.main-list {
   li {
     font-size: 24px;
     line-height: 40px;
