--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -1,3 +1,11 @@
 .main {
   margin-top: 10%;
+
+  .row-bot {
+    margin-top: 10%;
+
+    ul {
+      margin-bottom: 20px;
+    }
+  }
 }
